Dont Need Project4.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(CSE340_Proj4_ChaseOvercash)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(CSE340_Proj4_ChaseOvercash project4.cpp lexer.cpp lexer.h inputbuf.cpp inputbuf.h ir_debug.cpp ir_debug.h compiler.cpp compiler.h)
+add_executable(CSE340_Proj4_ChaseOvercash lexer.cpp lexer.h inputbuf.cpp inputbuf.h ir_debug.cpp ir_debug.h compiler.cpp compiler.h)
